# log-mining

./: .gitignore  README.md  pyproject.toml  test.txt
grammarparser/: main.py  tokenizer.py
src/identifiers/: __main__.py  identifiers.py
src/logs/: event.py  matchers.py  patterns.py  templates.py
src/logs/parsers/: drain3.py  drain3_test.py
src/logs/variables/: annotation.py
src/sense/logs/: event.py  matchers.py  patterns.py  templates.py
src/sense/logs/parsers/: drain3.py
src/sense/logs/variables/: annotate.py
src/sense/logs/variables/identifiers/: resample.py
