[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "log-mining"
dynamic = ["version"]
description = "Log mining code repository."
readme = "README.md"
license = "MIT"
keywords = []
authors = [
  { name = "bolu", email = "bolu@bolupi.me" },
]
requires-python = ">= 3.12"
dependencies = [
  "hyperscan",
  "google-re2",
  "xarray",
  "scipy",
  "tqdm",
  "lxml",
  "drain3",
]

[project.urls]
Documentation = "https://github.com/senseuwaterloo/log-mining#readme"
Issues = "https://github.com/senseuwaterloo/log-mining/issues"
Source = "https://github.com/senseuwaterloo/log-mining"

[tool.hatch.build]
packages = ["src/sense"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.lint]
dependencies = [
  "pyright>=1.1.352",
  "ruff>=0.3.0",
  "lxml-stubs",
]

[tool.hatch.envs.lint.scripts]
typing = "pyright {args:src/}"
style = "ruff check {args:src/}"
format = "ruff format {args:src/}"
all = [
  "style",
  "typing",
]
